# Event-Based-Camera-Processing

./: README.md
c++/: CMakeLists.txt  README.md
c++/include/: convert.hpp  event_converter.hpp  msgs.hpp
c++/src/: convert.cpp
python/ecal/: README.md  convert.py
python/ros2/: README.md  convert.py
